[tool.poetry]
name = "covid19 coronavirus"
version = "0.1.0"
description = ""
authors = ["Robert Bennett <rltbennett@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
requests = "^2.25.1"
geopandas = "^.7"

[tool.poetry.dev-dependencies]
ipython = "^7.20.0"
ipykernel = "^5.4.3"
jupyter = "^1.0.0"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
